--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <script src="node_modules/wowjs/dist/wow.min.js"></script>
 </head>
   <body>
+    <div class="navbar"></div>
     <div class="hero">
       <h1 class="wow animated fadeInDown slow title"><a href="#">MadebyStealth</a></h1>
       <a class="wow animated fadeInDown slow contact" href="mailto:hoppeconnect@gmail.com?Subject=Hello%20there" target="_top">contact us</a>
       <div class="wow animated fadeInDown slow info">
-        <h1>Web &amp app design</h1>
-        <h3 class="bio">We're a creative agency based in Toronto<br>helping buisnesses build their online presence.</h3>
+        <h1>A startup that helps startups, start up</h1>
+        <h3 class="bio">MadeByStealth is a creative agency delivering uncompromised digital experiences,<br/> crafted by individuals from all over the world. </h3>
       </div>
     </div>
     <section class="services">
