made desktop navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
   <script src="node_modules/wowjs/dist/wow.min.js"></script>
 </head>
   <body>
-    <div class="navbar"></div>
+    <div class="navbar">
+      <img src="assets/icons/menu.svg" class="icons menu">
+      <img src="assets/icons/MadeByStealth.svg" class="logo"></img>
+      <div class="socialIcons">
+          <img src="assets/icons/icon-dribbble.svg" class="icons">
+          <img src="assets/icons/icon-twitter.svg" class="icons ">
+          <img src="assets/icons/icon-insta.svg" class="icons">
+          <img src="assets/icons/at-sign.svg" class="icons at">
+      </div>
+
+    </div>
     <div class="hero">
       <h1 class="wow animated fadeInDown slow title"><a href="#">MadebyStealth</a></h1>
       <a class="wow animated fadeInDown slow contact" href="mailto:hoppeconnect@gmail.com?Subject=Hello%20there" target="_top">contact us</a>
