--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <img src="assets/icons/menu.svg" class="icons menu">
       <img src="assets/icons/MadeByStealth.svg" class="logo"></img>
       <div class="socialIcons">
-          <img src="assets/icons/icon-dribbble.svg" class="icons">
-          <img src="assets/icons/icon-twitter.svg" class="icons ">
-          <img src="assets/icons/icon-insta.svg" class="icons">
-          <img src="assets/icons/at-sign.svg" class="icons at">
+          <a href="#"><img src="assets/icons/icon-dribbble.svg" class="icons"></a>
+            <a href="#"><img src="assets/icons/icon-twitter.svg" class="icons "></a>
+            <a href="#"><img src="assets/icons/icon-insta.svg" class="icons"></a>
+            <a href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top"><img src="assets/icons/at-sign.svg" class="icons at"></a>
       </div>
 
     </div>
