imported hamburger for use on menu icon later

--- a/index.html
+++ b/index.html
@@ -7,24 +7,23 @@
   <meta property="og:image" content="assets/img/hero2.jpg">
   <meta property="og:description" content="Creative agency based in Toronto."/>
   <link rel ="stylesheet" href="assets/styles.css" type="text/css">
+    <link rel ="stylesheet" href="assets/hamburgers.css" type="text/css">
   <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
   <script src="node_modules/wowjs/dist/wow.min.js"></script>
 </head>
   <body>
-    <div class="navbar">
+    <div class="navbar"> 
       <img src="assets/icons/menu.svg" class="icons menu">
       <img src="assets/icons/MadeByStealth.svg" class="logo"></img>
       <div class="socialIcons">
-          <a href="#"><img src="assets/icons/icon-dribbble.svg" class="icons"></a>
+          <a href="#"><img src="assets/icons/icon-dribbble.svg" class="icons "></a>
             <a href="#"><img src="assets/icons/icon-twitter.svg" class="icons "></a>
             <a href="#"><img src="assets/icons/icon-insta.svg" class="icons"></a>
             <a href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top"><img src="assets/icons/at-sign.svg" class="icons at"></a>
       </div>
-
     </div>
     <div class="hero">
-      <h1 class="wow animated fadeInDown slow title"><a href="#">MadebyStealth</a></h1>
-      <a class="wow animated fadeInDown slow contact" href="mailto:hoppeconnect@gmail.com?Subject=Hello%20there" target="_top">contact us</a>
+      <a class="wow animated fadeInDown slow contact" href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">contact us</a>
       <div class="wow animated fadeInDown slow info">
         <h1>A startup that helps startups, start up</h1>
         <h3 class="bio">MadeByStealth is a creative agency delivering uncompromised digital experiences,<br/> crafted by individuals from all over the world. </h3>
