--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="node_modules/wowjs/dist/wow.min.js"></script>
 </head>
   <body>
-    <div class="navbar"> 
+    <div class="navbar">
       <img src="assets/icons/menu.svg" class="icons menu">
       <img src="assets/icons/MadeByStealth.svg" class="logo"></img>
       <div class="socialIcons">
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="hero">
-      <a class="wow animated fadeInDown slow contact" href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">contact us</a>
+      <a class="wow animated fadeInDown slow contact" href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">start a project</a>
       <div class="wow animated fadeInDown slow info">
         <h1>A startup that helps startups, start up</h1>
         <h3 class="bio">MadeByStealth is a creative agency delivering uncompromised digital experiences,<br/> crafted by individuals from all over the world. </h3>
