--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta property="og:image" content="assets/img/hero2.jpg">
   <meta property="og:description" content="Creative agency based in Toronto."/>
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
   <link rel ="stylesheet" href="assets/styles.css" type="text/css">
     <link rel ="stylesheet" href="assets/hamburgers.css" type="text/css">
   <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
@@ -13,7 +14,7 @@
 </head>
   <body>
     <div class="navbar">
-      <img src="assets/icons/menu.svg" class="icons menu">
+      <!-- <img src="assets/icons/menu.svg" class="icons menu"> -->
       <img src="assets/icons/MadeByStealth.svg" class="logo"></img>
       <div class="socialIcons">
           <a href="#"><img src="assets/icons/icon-dribbble.svg" class="icons "></a>
@@ -26,7 +27,7 @@
       <a class="wow animated fadeInDown slow contact" href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">start a project</a>
       <div class="wow animated fadeInDown slow info">
         <h1>A startup that helps startups, start up</h1>
-        <h3 class="bio">MadeByStealth is a creative agency delivering uncompromised digital experiences,<br/> crafted by individuals from all over the world. </h3>
+        <h3 class="bio">MadeByStealth is a digital agency creating digital experiences,<br/> crafted by individuals from all over the world. </h3>
       </div>
     </div>
     <section class="services">
