minor nav changes

--- a/index.html
+++ b/index.html
@@ -131,4 +131,11 @@
       new WOW().init();
     </script>
   </body>
+  <script>
+
+window.onblur = function () { document.title = 'Was it something we said?'; }
+
+window.onfocus = function () { document.title = 'MadeByStealth'; }
+
+</script>
 </html>
