--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="center">
         <h2 class="start-new-project">Start a new project with us?</h2>
         <p class="new-project-info">We'd love to hear about  your next project, contact us.</p>
-        <div class="btn"><a href="mailto:hoppeconnect@gmail.com?Subject=Hello%20there" target="_top"><button>Contact Us</button></a></div>
+        <div class="btn"><a href="mailto:hoppeconnect@gmail.com?Subject=Hello%20there" target="_top"><button>Contact US</button></a></div>
       </div>
     </section>
     <footer>
@@ -135,7 +135,7 @@
 
 window.onblur = function () { document.title = 'Was it something we said?'; }
 
-window.onfocus = function () { document.title = 'MadeByStealth'; }
+window.onfocus = function () { document.title = 'MadeByStealth - Design Firm & Tech Company '; }
 
 </script>
 </html>
