--- a/index.html
+++ b/index.html
@@ -11,65 +11,65 @@
   <link rel ="stylesheet" href="assets/hamburgers.css" type="text/css">
   <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <link type="text/css" rel="stylesheet" href="main.css">
+  <!-- Stylesheet that came w particle animation -->
+  <!-- <link type="text/css" rel="stylesheet" href="main.css"> -->
   <script src="js/three.min.js"></script>
   <script src="node_modules/wowjs/dist/wow.min.js"></script>
 </head>
-  <body>
-    <div class="navbar">
-      <!-- <img src="assets/icons/menu.svg" class="icons menu"> -->
-      <img src="assets/icons/MadeByStealth.svg" class="logo"></img>
-      <div class="socialIcons">
-          <a href="#"><img src="assets/icons/icon-dribbble.svg" class="icons "></a>
-            <a href="#"><img src="assets/icons/icon-twitter.svg" class="icons "></a>
-            <a href="#"><img src="assets/icons/icon-insta.svg" class="icons"></a>
-            <a href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top"><img src="assets/icons/at-sign.svg" class="icons at"></a>
-      </div>
+<body>
+  <div class="navbar">
+    <!-- <img src="assets/icons/menu.svg" class="icons menu"> -->
+    <img src="assets/icons/MadeByStealth.svg" class="logo"></img>
+    <div class="socialIcons">
+      <a href="#"><img src="assets/icons/icon-dribbble.svg" class="icons "></a>
+      <a href="#"><img src="assets/icons/icon-twitter.svg" class="icons "></a>
+      <a href="#"><img src="assets/icons/icon-insta.svg" class="icons"></a>
+      <a href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top"><img src="assets/icons/at-sign.svg" class="icons at"></a>
     </div>
-    <div class="hero">
-      <a class="wow animated fadeInDown slow contact" href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">start a project</a>
-      <div class="wow animated fadeInDown slow info">
-        <h1>A startup that helps startups, start up</h1>
-        <h3 class="bio">MadeByStealth is a digital agency creating digital experiences,<br/> crafted by individuals from all over the world. </h3>
-      </div>
+  </div>
+  <div class="hero">
+    <a class="wow animated fadeInDown slow contact" href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">start a project</a>
+    <div class="wow animated fadeInDown slow info">
+      <h1>A startup that helps startups, start up</h1>
+      <h3 class="bio">MadeByStealth is a digital agency creating digital experiences,<br/> crafted by individuals from all over the world. </h3>
     </div>
-    <section class="services">
-      <h2 class="wow animated fadeIn slow">Services</h2>
-      <p class="wow fadeIn slow" data-wow-delay="0.2s">These are just some of the services we provide.</p>
-      <div class="strategy-design-tech">
-        <div class="strategy wow animated fadeIn slow" data-wow-delay="0.5s">
-          <img src="assets/icons/strategy1.svg">
-          <h3>Strategy</h3>
-          <ul>
-            <li>User Research</li>
-            <li>Market Research</li>
-            <li>Social Media Marketing</li>
-            <li>SEO</li>
-            <li>Content Strategy</li>
+  </div>
+  <section class="services">
+    <h2 class="wow animated fadeIn slow">Services</h2>
+    <p class="wow fadeIn slow" data-wow-delay="0.2s">These are just some of the services we provide.</p>
+    <div class="strategy-design-tech">
+      <div class="strategy wow animated fadeIn slow" data-wow-delay="0.5s">
+        <img src="assets/icons/strategy1.svg">
+        <h3>Strategy</h3>
+        <ul>
+          <li>User Research</li>
+          <li>Market Research</li>
+          <li>Social Media Marketing</li>
+          <li>SEO</li>
+          <li>Content Strategy</li>
+        </ul>
+      </div>
+      <div class="design wow animated fadeIn slow" data-wow-delay="0.5s">
+        <img src="assets/icons/design.svg">
+        <h3>Design</h3>
+        <ul>
+          <li>Creative Design</li>
+          <li>Website Design</li>
+          <li>App Design</li>
+          <li>UI & UX Design</li>
+          <li>Photography</li>
           </ul>
-        </div>
-        <div class="design wow animated fadeIn slow" data-wow-delay="0.5s">
-          <img src="assets/icons/design.svg">
-          <h3>Design</h3>
-          <ul>
-            <li>Creative Design</li>
-            <li>Website Design</li>
-            <li>App Design</li>
-            <li>UI & UX Design</li>
-            <li>Photography</li>
-          </ul>
-        </div>
-        <div class="technology wow animated fadeIn slow" data-wow-delay="0.5s">
-          <img src="assets/icons/technology2.svg">
-          <h3>Technology</h3>
-          <ul>
-            <li>Website Development</li>
-            <li>E-Commerce Development</li>
-            <li>Content Management Systems</li>
-            <li>Prototyping</li>
-            <li>Technical Support</li>
-          </ul>
-        </div>
+      </div>
+      <div class="technology wow animated fadeIn slow" data-wow-delay="0.5s">
+        <img src="assets/icons/technology2.svg">
+        <h3>Technology</h3>
+        <ul>
+          <li>Website Development</li>
+          <li>E-Commerce Development</li>
+          <li>Content Management Systems</li>
+          <li>Prototyping</li>
+          <li>Technical Support</li>
+        </ul>
       </div>
       <div class="services_footer">
         <p><a href="mailto:hoppeconnect@gmail.com?Subject=Hello%20there" target="_top"><span class="contact-us">Contact us</span></a> if your looking for something in particular.</p>
@@ -130,6 +130,7 @@
         <li><a target="_blank" href="https://dribbble.com/BenjaminHoppe"</a><img src="assets/icons/dribbble.svg"></li>
       </ul>
     </footer>
+
     <script>
       new WOW().init();
     </script>
@@ -199,6 +200,7 @@
 				//
 				renderer = new THREE.WebGLRenderer( { antialias: true } );
 
+        // This puts the waves up at the top :)
         renderer.domElement.style.position = 'absolute';
         renderer.domElement.style.top = '0px';
         renderer.setClearColor('#191919');
@@ -255,18 +257,25 @@
 			}
 			function render() {
 
+        // ---------------------------------------------------------------------
         // commenting out locks camera scorll
 
 				// camera.position.x += ( mouseX - camera.position.x ) * .05;
 				// camera.position.y += ( - mouseY - camera.position.y ) * .05;
         // camera.position.set(0,200,400);
+        // ---------------------------------------------------------------------
 
+        // ---------------------------------------------------------------------
         // This one is good, just want it more head on
-        camera.position.set(500,200,500);
+        // camera.position.set(500,200,500);
+        // ---------------------------------------------------------------------
 
+        // ---------------------------------------------------------------------
         // Head on, too "high"
         // camera.position.set(0,0,0);
+        // ---------------------------------------------------------------------
 
+        camera.position.set(0,300,1200);
         camera.lookAt( scene.position );
 
 				camera.lookAt( scene.position );
@@ -289,12 +298,10 @@
 				count += 0.1;
 			}
 
-      // Title
-		</script>
-  <script>
-    window.onblur = function () { document.title = 'Was it something we said?'; }
+      // Changes title in tabar when window is innactive
+      window.onblur = function () { document.title = 'Was it something we said?'; }
 
-    window.onfocus = function () { document.title = 'MadeByStealth - Design & Development Studio '; }
-</script>
-</html>
+      window.onfocus = function () { document.title = 'MadeByStealth - Design & Development Studio '; }
+		</script>
+  </html>
 </body>
