building about section

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
       <h3 class="bio">MadeByStealth is a digital agency creating digital experiences,<br/> crafted by individuals from all over the world. </h3>
     </div>
   </div>
+
   <section class="services">
-    <h2 class="wow animated fadeIn slow">Services</h2>
+    <h2 class="wow animated fadeIn slow">About</h2>
     <p class="wow fadeIn slow" data-wow-delay="0.2s">These are just some of the services we provide.</p>
     <div class="strategy-design-tech">
       <div class="strategy wow animated fadeIn slow" data-wow-delay="0.5s">
@@ -74,7 +75,9 @@
       <div class="services_footer">
         <p><a href="mailto:hoppeconnect@gmail.com?Subject=Hello%20there" target="_top"><span class="contact-us">Contact us</span></a> if your looking for something in particular.</p>
       </div>
+    </div>
     </section>
+
     <section class="case_studies">
       <h2>Case Studies</h2>
       <p class="case_info">Check out some of our selected case studies.</p>
