renamed about to capabilities and added section abov

--- a/index.html
+++ b/index.html
@@ -27,15 +27,22 @@
       <a href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top"><img src="assets/icons/at-sign.svg" class="icons at"></a>
     </div>
   </div>
-  <div class="hero">
+
+  <section class="hero">
     <a class="wow animated fadeInDown slow contact" href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">start a project</a>
     <div class="wow animated fadeInDown slow info">
       <h1>A startup that helps startups, start up</h1>
       <h3 class="bio">MadeByStealth is a digital agency creating digital experiences,<br/> crafted by individuals from all over the world. </h3>
     </div>
-  </div>
+  </section>
 
-  <section class="services">
+  <section class>
+    <h2>
+  </section>
+
+
+
+  <section class="capabilities">
     <h2 class="wow animated fadeIn slow">About</h2>
     <p class="wow fadeIn slow" data-wow-delay="0.2s">These are just some of the services we provide.</p>
     <div class="strategy-design-tech">
