added content for about section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 
   <section class="about">
     <h2>About</h2>
+    <p class="about_content">MadeByStealth is complied of creative individuals from all over the globe. One of our core beliefs is that remote work is the future of work. By structuring ourselves in this manner, we don't limit ourselves to who we can work with, that goes for both members of our team as well as clients.</br></br>One of our core beliefs is that distance shouldn’t be a reason we can’t create together. We believe that remote is the future of work, that’s why our team is made up or individuals from different pockets of the globe. We feel this way about our clients as well, by structuring ourselves in a manner that allows us to work with anyone, we never limit ourselves to who we can or can’t work with.</p>
+
+    <p class="about_cta">Ready to get started on a project? <a href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">Contact Us</a></p>
   </section>
 
 
