changed wave animation

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li>App Design</li>
           <li>UI & UX Design</li>
           <li>Photography</li>
-          </ul>
+        </ul>
       </div>
       <div class="technology wow animated fadeIn slow" data-wow-delay="0.5s">
         <img src="assets/icons/technology2.svg">
@@ -167,7 +167,9 @@
 		<script type="module">
 			//import * as THREE from '../build/three.module.js';
 			//import Stats from './jsm/libs/stats.module.js';
-			var SEPARATION = 100, AMOUNTX = 50, AMOUNTY = 50;
+
+      // amoutx/amounty defaults are 50
+			var SEPARATION = 100, AMOUNTX = 75, AMOUNTY = 75;
 			var container, stats;
 			var camera, scene, renderer;
 			var particles, count = 0;
