working on first cta

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <section class="hero">
-    <a class="wow animated fadeInDown slow contact" href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">start a project</a>
+    <a class="wow animated fadeInDown slow contact" href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top">Email Us</a>
     <div class="wow animated fadeInDown slow info">
       <h1>A startup that helps startups, start up</h1>
       <h3 class="bio">MadeByStealth is a digital agency creating digital experiences,<br/> crafted by individuals from all over the world. </h3>
