--- a/index.html
+++ b/index.html
@@ -289,8 +289,9 @@
         // Head on, too "high"
         // camera.position.set(0,0,0);
         // ---------------------------------------------------------------------
+        camera.position.set(0,300,1600);
 
-        camera.position.set(0,300,1200);
+        // camera.position.set(0,300,1200);
         camera.lookAt( scene.position );
 
 				camera.lookAt( scene.position );
