--- a/index.html
+++ b/index.html
@@ -88,55 +88,12 @@
     </div>
     </section>
 
-    <section class="case_studies">
-      <h2>Case Studies</h2>
-      <p class="case_info">Check out some of our selected case studies.</p>
-      <div class="cases">
-        <div class="case_1 wow animated fadeInLeft" data-wow-delay="0.5s">
-          <a target="_blank" href="https://theultralinx.com/"><img src="assets/img/Screen Shot 2018-11-20 at 11.08.48 AM.png"></a>
-          <h3 class="case_title">UltraLinx</h3>
-          <p><span class="small_text">Web Design, Editorial, Photography</span></p>
-        </div>
-        <div class="case_2 wow animated fadeInRight" data-wow-delay="0.5s">
-          <a target="_blank" href="https://linxsupply.com/"><img src="assets/img/Screen Shot 2018-11-20 at 11.09.05 AM.png"></a>
-          <h3 class="case_title">Linx Supply</h3>
-          <p><span class="small_text">Commerce, Web Design, Product</span></p>
-        </div>
-      </div>
-      <p><a target="_blank" href="https://dribbble.com/BenjaminHoppe"><span class="see_more">See more of our work over on Dribbble.</span></a></p>
+    <section class="quicknote">
+      <p>A quick note</p>
     </section>
-    <section class="clients">
-      <p><span class="small_text wow animated fadeInDown" data-wow-delay="0.3s">CLIENTS & CUSTOMERS</span></p>
-      <div class="client-grid">
-        <div class="client wow animated fadeInUp" data-wow-delay="0.3s">
-          <img src="assets/logos/amazon.png">
-        </div>
-        <div class="client wow animated fadeInUp" data-wow-delay="0.3s">
-          <img src="assets/logos/fedex.png">
-        </div>
-        <div class="client wow animated fadeInUp" data-wow-delay="0.3s">
-          <img src="assets/logos/nike.png">
-        </div>
-        <div class="client wow animated fadeInUp" data-wow-delay="0.3s">
-          <img src="assets/logos/sony.png">
-        </div>
-        <div class="client wow animated fadeInUp" data-wow-delay="0.3s">
-          <img src="assets/logos/universal.png">
-        </div>
-        <div class="client wow animated fadeInUp" data-wow-delay="0.3s">
-          <img src="assets/logos/virgin.png">
-        </div>
-      </div>
-    </section>
-    <section class="new-project">
-      <div class="center">
-        <h2 class="start-new-project">Start a new project with us?</h2>
-        <p class="new-project-info">We'd love to hear about  your next project, contact us.</p>
-        <div class="btn"><a href="mailto:hoppeconnect@gmail.com?Subject=Hello%20there" target="_top"><button>Contact US</button></a></div>
-      </div>
-    </section>
+
     <footer>
-      <p class="copyright">&copy; Ultra Limited 2019</p>
+      <p class="copyright">&copy; MadeByStealth 2019. All Rights Reserved.</p>
       <ul class="social-icons">
         <li><a target="_blank" href="https://twitter.com/mrbenjaminhoppe"</a><img src="assets/icons/twitter.svg"></li>
         <li><a target="_blank" href="https://deletefacebook.com/"</a><img src="assets/icons/facebook.svg"></li>
