commented out Dribbble nav icon for now

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- <img src="assets/icons/menu.svg" class="icons menu"> -->
     <img src="assets/icons/MadeByStealth.svg" class="logo"></img>
     <div class="socialIcons">
-      <a href="http://design.benjaminhoppe.co/" target="_blank"><img src="assets/icons/icon-dribbble.svg" class="icons "></a>
+      <!-- <a href="http://design.benjaminhoppe.co/" target="_blank"><img src="assets/icons/icon-dribbble.svg" class="icons "></a> -->
       <a href="https://twitter.com/madebystealth" target="_blank"><img src="assets/icons/icon-twitter.svg" class="icons "></a>
       <a href="https://www.instagram.com/stealthcrafted/" target="_blank"><img src="assets/icons/icon-insta.svg" class="icons"></a>
       <a href="mailto:hello@madebystealth.com?Subject=Project%20Proposal" target="_top"><img src="assets/icons/at-sign.svg" class="icons at"></a>
